--- a/index.ipynb
+++ b/index.ipynb
@@ -51,9 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "dlrow olleh\n",
+      "b'dlrow olleh'\n",
+      "38\n",
+      "b'&'\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
@@ -79,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68656c6c6f20776f726c64\n",
+      "b'hello world'\n"
+     ]
+    }
+   ],
    "source": [
     "print(b'hello world'.hex())\n",
     "print(bytes.fromhex('68656c6c6f20776f726c64'))"
@@ -100,11 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
+    "\n",
+    "bytes.fromhex(h)[::-1].hex()\n",
     "\n",
     "# convert to binary (bytes.fromhex)\n",
     "# reverse ([::-1])\n",
@@ -234,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
