--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "n = 8675309\n",
-    "m\n",
+    "n.to_bytes\n",
     "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
