automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,12 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 8675309\n",
-    "n.to_bytes(8, 'li55')\n",
+    "print(n.to_bytes(8, 'little')\n",
     "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
