automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,15 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xed_\\x84\\x00\\x00\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
    "source": [
     "n = 8675309\n",
-    "print(n.to_bytes(8, 'little')\n",
+    "print(n.to_bytes(8, 'little'))\n",
     "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
+    "\n",
     "# print little endian in decimal"
    ]
   },
