automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
-    "\n",
+    "int.from_bytes(little_endian, 'li)\n",
     "# print little endian in decimal"
    ]
   },
