automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +221,16 @@
      "text": [
       "b'\\xed_\\x84\\x00\\x00\\x00\\x00\\x00'\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "366216421905"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -229,7 +239,7 @@
     "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
-    "int.from_bytes(little_endian, 'li)\n",
+    "int.from_bytes(little_endian, 'little')\n",
     "# print little endian in decimal"
    ]
   },
