--- a/index.ipynb
+++ b/index.ipynb
@@ -267,8 +267,7 @@
     "def int_to_little_endian(n, length):\n",
     "    '''endian_to_little_endian takes an integer and returns the little-endian\n",
     "    byte sequence of length'''\n",
-    "    # use the to_bytes method of n\n",
-    "    pass"
+    "    n.to_bytes(length, 'little')"
    ]
   }
  ],
