automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,15 @@
     "def int_to_little_endian(n, length):\n",
     "    '''endian_to_little_endian takes an integer and returns the little-endian\n",
     "    byte sequence of length'''\n",
-    "    n.to_bytes(length, 'little')"
+    "    return n.to_bytes(length, 'little')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
